--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,12 @@ phases:
   pre_build:
     commands:
       - echo "Installing third-party dependencies"
-      - curl -O https://sourceforge.net/projects/syft.mirror/files/v0.100.0/syft_0.100.0_linux_amd64.rpm
-      - chmod +x syft_0.100.0_linux_amd64.rpm
+      - brew install syft
 
   build:
     commands:
       - echo "Building the application"
+      - syft
 
   post_build:
     commands:
