--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,18 +3,18 @@ version: 0.2
 phases:
   install:
     commands:
-      - uname -a
-  pre_build:
-    commands:
       - echo "Installing third-party dependencies"
       - aws s3 cp s3://sec1demobucket/sec1-cli-linux $CODEBUILD_SRC_DIR
       - chmod +x $CODEBUILD_SRC_DIR/sec1-cli-linux
+  pre_build:
+    commands:
+      - echo "Setting up application"
 
   build:
     commands:
       - echo "Building the application"
-      - $CODEBUILD_SRC_DIR/sec1-cli-linux scan $CODEBUILD_SRC_DIR --apiKey $API_KEY
 
   post_build:
     commands:
-      - echo "Running post-build steps"
+      - echo "Running Sec1 Scan"
+      - $CODEBUILD_SRC_DIR/sec1-cli-linux scan $CODEBUILD_SRC_DIR --apiKey $API_KEY
