--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
             - ~/.m2/repository
       - sec1-orb/scan:
           api_key: ${SEC1_API_KEY}
+          scan_threshold: critical=0 high=0 medium=0
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
